syntax = "proto3";
import "google/protobuf/empty.proto";
package pb;
option go_package = "./;pb";

message Customer {
    string id = 1;
    string name = 2;
    string address = 3;
    string license_id = 4;
    string phone_number = 5;
}

message GetCustomerRequest {
    string id = 1;
}

message GetCustomerResponse {
    Customer customer = 1;
}

message GetCustomersResponse {
    repeated Customer customers = 1;
}

service CustomerService {
    rpc PostCustomer (Customer) returns (Customer) {}
    rpc GetCustomer (GetCustomerRequest) returns (Customer) {}
    rpc GetCustomers (google.protobuf.Empty) returns (GetCustomersResponse) {}
}
